# kmAnalytic

./: .gitignore  README.md  pants.ini
src/be/rawdata/: app.py  pyproject.toml  requirements.txt
src/be/rawdata/api/: __init__.py  clients.py
src/be/rawdata/domain/: domain.py  test_client.py
src/be/rawdata/providers/: provider.py
src/be/rawdata/repository/: client_repository.py  csv_reader.py  csv_repository.py
src/be/rawdata/service/: app.py
src/be/rawdata/service/api/: clients.py
src/be/rawdata/service/domain/: domain.py
src/be/rawdata/service/providers/: provider.py
src/be/rawdata/service/repository/: client_repository.py  csv_reader.py
src/be/rawdata/service/swagger/: rawdata_service_docs.yaml
src/be/rawdata/swagger/: rawdata_service_docs.yaml
src/be/rawdata/test/repository/: test_clientRepository.py  test_csvReader.py
