[tool.poetry]
name = "service"
version = "0.1.0"
description = "Rawdata service"
authors = ["Alexey Portnyagin <portnyagin@i-teco.ru>"]

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^2.3"
connection = "^2019.4"
connexion = "^2.4"
injector = "^0.17.0"
flask_injector = "^0.12.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.poetry.scripts]
 app= "app:main"